Add SEO meta tags, robots.txt, and sitemap.xml for better indexing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Kalpick Sharma's Terminal Portfolio - Web Developer, Designer, and Creator. Explore my projects, contact me, and learn more about my work.">
+  <meta name="keywords" content="Kalpick Sharma, portfolio, web developer, projects, contact, terminal portfolio, JavaScript, React, Vite">
+  <meta name="author" content="Kalpick Sharma">
+  <meta property="og:title" content="Kalpick Sharma | Terminal Portfolio">
+  <meta property="og:description" content="Web Developer, Designer, and Creator. Explore my projects and contact me.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://kalpicksharma.netlify.app/">
+  <meta property="og:image" content="https://kalpicksharma.netlify.app/1ad91227420340fa8a847657a28393d3.jpg">
     <title>Terminal Portfolio</title>
   </head>
   <body>
