--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="H0BpEo12_KjHoMflA-HzF9GxVp2tgFxKZxVrusi68Bw" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Kalpick Sharma's Terminal Portfolio - Web Developer, Designer, and Creator. Explore my projects, contact me, and learn more about my work.">
