--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://kalpicksharma.netlify.app/">
   <meta property="og:image" content="https://kalpicksharma.netlify.app/1ad91227420340fa8a847657a28393d3.jpg">
-    <title>Terminal Portfolio</title>
+    <title>Kalpick-Terminal Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
